# sudoku

./: CMakeLists.txt  console_user_interface.c  console_user_interface.h  exhaustive_backtracking_solver.c  exhaustive_backtracking_solver.h  game_board_operations.c  game_board_operations.h  game_logic.c  game_logic.h  game_moves_list.c  game_moves_list.h  helper_functions.c  helper_functions.h  ilp_solver.c  ilp_solver.h  main.c  makefile  puzzle_generator.h
